# Pure Cell
# Copyright © 2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "pure_cell"
version = "0.1.0"
license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "Alternative to GhostCell that provides safe interior mutability via const expressions."
repository = "https://github.com/AldaronLau/pure_cell"
documentation = "https://docs.rs/pure_cell"
homepage = "https://github.com/AldaronLau/pure_cell/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "memory-management",
    "no-std",
    "rust-patterns",
    "wasm",
]
keywords = ["cell", "const", "pure", "interior", "mutability"]
readme = "README.md"
edition = "2021"
